--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 #root {
+  --header-font-size: 30px;
+  --font-size: 17px;
+  --sub-header-font-size: 20px;
+  --nav-background-color: #f7f7f7;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 0px 10px;
+  font-size: 17px;
 }
