--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,16 @@
   src: url(./assets//fonts//Montserrat-Bold.ttf);
 }
 #root {
-  --header-font-size: 40px;
+  --header-font-size: 32px;
   --header-font-family: "Montsarrat-Bold";
   --font-size: 17px;
   --sub-header-font-size: 20px;
-  --nav-background-color: #f7f7f7;
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 0px 10px;
+  /* padding: 0px 10px; */
   font-size: 17px;
   font-family: "Montsarrat-Regular";
+  color: rgb(26, 26, 26);
+  --small-margin: 20px;
+  --big-margin: 20px;
 }
